
syntax = "proto3";
option optimize_for = CODE_SIZE;
option go_package = ".;proto";

package proto;

message StorageEntry {
  string key = 1;
  bytes value = 2;
}

message StorageListArgs {
  string prefix = 1;
}

message StorageListReply {
  repeated StorageEntry entities = 1;
  string err = 2;
}

message StorageGetArgs {
  string key = 1;
}

message StorageGetReply {
  StorageEntry entry = 1;
  string err = 2;
}

message StoragePutArgs {
  StorageEntry entry = 1;
}

message StoragePutReply {
  string err = 1;
}

message StorageDeleteArgs {
  string key = 1;
}

message StorageDeleteReply {
  string err = 1;
}


// Storage is the way that plugins are able read/write data. Plugins should
// implement the client for this service.
service Storage {
  rpc List(StorageListArgs) returns (StorageListReply);
  rpc Get(StorageGetArgs) returns (StorageGetReply);
  rpc Put(StoragePutArgs) returns (StoragePutReply);
  rpc Delete(StorageDeleteArgs) returns (StorageDeleteReply);
}